# Agent_OS

./: .env  .env.example  .gitignore  Dockerfile  README.md  SETUP.md  agent_memory.db  agent_os.db  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 031c1c0ecb99_initial_schema.py  395f375bd22c_tune_vector_search_hnsw.py  85690dd10fd9_harden_rls_security_definer.py  d3deaab69fe8_harden_rls_security_definer.py
app/: main.py
app/agents/: base.py  react.py  supervisor.py
app/api/: dependencies.py
app/api/routes/: agents.py  health.py  mcp.py  tasks.py  tenants.py
app/core/: audit.py  config.py  db.py  exceptions.py  logging.py  metrics.py  resilience.py
app/db/: session.py
app/kernel/: celery_app.py  registry.py  scheduler.py  tasks.py
app/mcp/: base.py  registry.py
app/memory/: cache.py  store.py
app/models/: __init__.py  agent.py  db.py  schemas.py  task.py  tenant.py  validation.py
app/policy/: engine.py
app/runtime/: engine.py  sandbox.py
app/schemas/: __init__.py  agent.py  task.py  tenant.py
app/security/: vault.py
app/tools/: base.py  builtins.py  context.py  registry.py
app/worker/: celery_app.py  tasks.py
k8s/: api-deployment.yaml  keda-scaledobject.yaml  network-policy.yaml  worker-deployment.yaml
scripts/: example.py  initialize_enterprise.py  purge_db_from_history.sh
tests/: conftest.py  test_api.py  test_sandbox.py  test_security_isolation.py  test_stress.py  test_system.py
tests/api/: test_health.py
(+3 files in other folders)
