[project]
name = "Agent_OS"
version = "1.0.0"
description = "Multi-Tenant Agent OS Control Plane"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn[standard]==0.27.1",
    "celery==5.3.6",
    "redis==5.0.1",
    "sqlalchemy==2.0.27",
    "psycopg2-binary==2.9.9",
    "pydantic==2.6.3",
    "pydantic-settings==2.2.1",
    "structlog==24.1.0",
    "python-dotenv==1.0.1",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing"
